Presentación de los resultados

--- a/[POO-Proyecto2]Server/nbproject/project.properties
+++ b/[POO-Proyecto2]Server/nbproject/project.properties
@@ -27,9 +27,25 @@ dist.dir=dist
 dist.jar=${dist.dir}/_POO-Proyecto2_Server.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-beanutils-1.8.0.jar=C:\\Users\\Nelson\\Dropbox\\Diagramas del Proyecto\\codigo\\RespaldoDeInterfaces\\27-11-17\\Yaba\\commons-beanutils-1.8.0.jar
+file.reference.commons-collections-2.1.1.jar=C:\\Users\\Nelson\\Dropbox\\Diagramas del Proyecto\\codigo\\RespaldoDeInterfaces\\27-11-17\\Yaba\\commons-collections-2.1.1.jar
+file.reference.commons-digester-1.7.jar=C:\\Users\\Nelson\\Dropbox\\Diagramas del Proyecto\\codigo\\RespaldoDeInterfaces\\27-11-17\\Yaba\\commons-digester-1.7.jar
+file.reference.commons-javaflow-20060411.jar=C:\\Users\\Nelson\\Dropbox\\Diagramas del Proyecto\\codigo\\RespaldoDeInterfaces\\27-11-17\\Yaba\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.0.4.jar=C:\\Users\\Nelson\\Dropbox\\Diagramas del Proyecto\\codigo\\RespaldoDeInterfaces\\27-11-17\\Yaba\\commons-logging-1.0.4.jar
+file.reference.commons-logging-api.jar=C:\\Users\\Nelson\\Dropbox\\Diagramas del Proyecto\\codigo\\RespaldoDeInterfaces\\27-11-17\\Yaba\\commons-logging-api.jar
+file.reference.jcommon-1.0.16.jar=C:\\Users\\Nelson\\Dropbox\\Diagramas del Proyecto\\codigo\\RespaldoDeInterfaces\\27-11-17\\Yaba\\jcommon-1.0.16.jar
+file.reference.jfreechart-1.0.13.jar=C:\\Users\\Nelson\\Dropbox\\Diagramas del Proyecto\\codigo\\RespaldoDeInterfaces\\27-11-17\\Yaba\\jfreechart-1.0.13.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-collections-2.1.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.0.4.jar}:\
+    ${file.reference.commons-logging-api.jar}:\
+    ${file.reference.jcommon-1.0.16.jar}:\
+    ${file.reference.jfreechart-1.0.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
